unpackaged/main/default/objects/Allocation__c/Allocation__c.object-meta.xml
<CustomObject>
    <label>Allocation</label>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Allocation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocations</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>