unpackaged/main/default/objects/Allocation__c/fields/Advisor_Notes__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Notes__c</fullName>
    <label>Advisor Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>