unpackaged/main/default/objects/Allocation__c/fields/Asset_Management_Notes__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management_Notes__c</fullName>
    <label>Asset Management Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>