unpackaged/main/default/objects/Allocation__c/fields/Current_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Current_Allocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current Allocation</label>
    <type>Checkbox</type>
</CustomField>