unpackaged/main/default/objects/Allocation__c/fields/Date_Implemented__c.field-meta.xml
<CustomField>
    <fullName>Date_Implemented__c</fullName>
    <label>Date Implemented</label>
    <type>Date</type>
</CustomField>