unpackaged/main/default/objects/Allocation__c/fields/Date_Inactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Inactivated__c</fullName>
    <label>Date Inactivated</label>
    <type>Date</type>
</CustomField>