unpackaged/main/default/objects/Allocation__c/fields/Date_Requested__c.field-meta.xml
<CustomField>
    <fullName>Date_Requested__c</fullName>
    <formula>Request_Allocation_Originated_From__r.CreatedDate</formula>
    <label>Date Requested</label>
    <type>Date</type>
</CustomField>