unpackaged/main/default/objects/Allocation__c/fields/Request_Allocation_Inactivated_From__c.field-meta.xml
<CustomField>
    <fullName>Request_Allocation_Inactivated_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Allocation Inactivated From</label>
    <referenceTo>Order_Ticket__c</referenceTo>
    <relationshipLabel>Allocations (Request Allocation Inactivated From)</relationshipLabel>
    <relationshipName>Allocations1</relationshipName>
    <type>Lookup</type>
</CustomField>