unpackaged/main/default/objects/Allocation__c/fields/Request_Allocation_Originated_From__c.field-meta.xml
<CustomField>
    <fullName>Request_Allocation_Originated_From__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Allocation Originated From</label>
    <referenceTo>Order_Ticket__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>