unpackaged/main/default/objects/Allocation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Wizard_Financial_Account__c</columns>
    <columns>Current_Allocation__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>